k8s-student-mnm/k8s/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: st-mnm-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: st-mnm-be  
  template:
    metadata:
      labels:
        app: st-mnm-be
    spec:
      containers:
      - name: st-mnm-be
        image: nasirnjs/stmnmfe:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: st-mnm-be
spec:
  selector:
    app: st-mnm-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
