k8s-student-mnm/k8s/st-mnm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: st-mnm-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: st-mnm-fe
            port:
              number: 80
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /be/?(.*)
        backend:
          service:
            name: eticker-be
            port:
              number: 80
